--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0",
+    "gulp-requirejs": "^0.1.3",
     "gulp-sass": "^2.2.0",
     "gulp-util": "^3.0.7"
   }
